Выполнение ТЗ-9